# cans-settlement

./: .gitignore  AGENTS.md  Cargo.toml  rust-analyzer.toml
.cargo/: config.toml
.github/workflows/: ci.yml
bins/wallet-server/: Cargo.toml
bins/wallet-server/src/: ledger_store.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: constants.rs  lib.rs  operators.rs  ssp.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: adaptor_signature.rs  derivation_path.rs  ecies.rs  frost.rs  lib.rs  secp.rs  verifiable_secret_sharing.rs
crates/graphql/: Cargo.toml
crates/graphql/src/: base64.rs  error.rs  json.rs  lib.rs
crates/sdk/: Cargo.toml
crates/sdk-core/: Cargo.toml
crates/sdk-core/src/: lib.rs  spark_address.rs
crates/sdk/src/: bitcoin_tx.rs  error.rs  frost_bridge.rs  ledger.rs  lib.rs  network.rs  ssp.rs  utils.rs  wallet_store.rs
crates/sdk/src/hooks/: mod.rs  sparkscan.rs
crates/sdk/src/operations/: balance.rs  claim.rs  convert.rs  deposit.rs  events.rs  exit.rs  lightning.rs  mod.rs  swap.rs  sync.rs  sync_tokens.rs  token.rs  tracking.rs  transfer.rs  transfer_core.rs
crates/sdk/src/operations/btc/: events.rs  exit.rs  lightning.rs  mod.rs  swap.rs  sync.rs  transfer.rs  transfer_core.rs
crates/sdk/src/operations/btc/claim/: key_tweaks.rs  mod.rs  signing.rs  verify_decrypt.rs
crates/sdk/src/operations/btc/lightning/: htlc.rs  mod.rs  preimage.rs
crates/sdk/src/operations/btc/transfer/: mod.rs  signing.rs
crates/sdk/src/operations/claim/: mod.rs  verify_decrypt.rs
crates/sdk/src/operations/token/: hash.rs  helpers.rs  mod.rs  ops.rs  sync.rs
crates/sdk/src/token/: memory.rs  mod.rs  selection.rs  store.rs
crates/sdk/src/tree/: memory.rs  mod.rs  selection.rs  store.rs
crates/sdk/tests/: e2e.rs
crates/signer/: Cargo.toml
crates/signer/src/: ecdsa.rs  lib.rs  spark.rs  wallet.rs  wallet_signer.rs
crates/sparkscan-client/: Cargo.toml
crates/sparkscan-client/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs
crates/transport/: Cargo.toml  build.rs
crates/transport/proto/: common.proto  dkg.proto  frost.proto  gossip.proto  mock.proto  spark.proto  spark_authn.proto  spark_authn_internal.proto  spark_internal.proto  spark_token.proto  spark_token_internal.proto
crates/transport/proto/validate/: validate.proto
crates/transport/src/: grpc.rs  lib.rs  session.rs
crates/transport/tests/: auth_integration.rs
docs/: TRANSFER_IMPLEMENTATION_PLAN.md  claim-flow-optimization-plan.md
tools/funding-client/: Cargo.toml
tools/funding-client/src/: config.rs  lib.rs
