[package]
name = "wallet-server"
publish = ["polarity"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Minimal wallet server binary using the Spark SDK"

[dependencies]
sdk = { path = "../../crates/sdk" }
sdk-core = { workspace = true }
graphql = { path = "../../crates/graphql" }
config = { path = "../../crates/config" }
signer = { path = "../../crates/signer" }
funding-client = { path = "../../tools/funding-client" }
bip39 = "2"
bitcoin = { workspace = true }
rand_core = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Ledger store (heed/LMDB backend)
heed = "0.22"
serde = { workspace = true }
serde_json = "1"

[profile.release]
strip = true
lto = true