[package]
name = "config"
publish = ["polarity"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Spark network configuration: operators, SSP, and protocol constants"

[dependencies]
sdk-core = { workspace = true }
