[package]
name = "sdk"
publish = ["polarity"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Spark SDK: wallet operations, transfers, tokens, and Lightning"

[dependencies]
config = { path = "../config" }
sdk-core = { workspace = true }
signer = { path = "../signer" }
spark-crypto = { workspace = true }
transport = { path = "../transport" }
storage = { path = "../storage" }
bitcoin = { workspace = true }
bytes = { workspace = true }
k256 = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand_core = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tonic = { workspace = true }
hyper = { version = "1", features = ["http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http2", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["native-tokio", "http2", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
http-body-util = "0.1"

[dev-dependencies]
bip39 = "2"
funding-client = { path = "../../tools/funding-client" }
