[package]
name = "sdk"
publish = ["polarity"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Spark SDK: wallet operations, transfers, tokens, and Lightning"

[dependencies]
config = { path = "../config" }
graphql = { path = "../graphql" }
sdk-core = { workspace = true }
signer = { path = "../signer" }
spark-crypto = { workspace = true }
transport = { path = "../transport" }
storage = { path = "../storage" }
bitcoin = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand_core = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tonic = { workspace = true }
tracing = "0.1"

[dev-dependencies]
bip39 = "2"
funding-client = { path = "../../tools/funding-client" }
lightning-invoice = { version = "0.34.0", features = ["std"] }
lightning-types = "0.3.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
