[package]
name = "funding-client"
publish = ["polarity"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
